# listen_book

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 20260616_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: audio.py  books.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: audio.py  base.py  book.py  job.py  progress.py  user.py
backend/app/schemas/: audio.py  book.py
backend/app/services/: audio.py  books.py  progress.py  text_splitter.py  tts.py
backend/app/workers/: parse_books.py
backend/tests/: conftest.py  test_books_api.py
docs/: PROJECT_MEMORY.md  ai-reading-app-plan-v2.md  ai-reading-app-plan.md  progress-2026-06-17.md  progress-2026-06-18.md  progress-2026-06-19.md  runbook.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
samples/: tts-test-sample.txt
scripts/: smoke_api.py  start-dev.bat  stop-dev.bat  upload_sample.py
