[project]
name = "listen-book-backend"
version = "0.1.0"
description = "FastAPI backend for the Listen Book app"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "edge-tts>=7.2",
  "fastapi>=0.115",
  "passlib[bcrypt]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
